feat(migration): add previewed channel migration
Detect Future role pairs automatically, preserve permission overrides, and require explicit confirmation before recreating channels. Keep existing categories and channels intact during migration.